comp/y.output
Terminals unused in grammar

    COMMA
    COLON
    DOT
    ELSIF
    WHILE
    FOR
    RETURN
    BREAK
    CONTINUE
    STRING_T


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: definition_or_statement
    2                 | translation_unit definition_or_statement

    3 definition_or_statement: function_definition
    4                        | statement

    5 function_definition: type_specifier IDENTIFIER LP RP SEMICOLON

    6 statement: expression SEMICOLON
    7          | declaration_statement
    8          | block
    9          | if_statement

   10 declaration_statement: type_specifier IDENTIFIER SEMICOLON
   11                      | type_specifier IDENTIFIER ASSIGN_T expression SEMICOLON

   12 block: LC statement_list RC
   13      | LC RC

   14 statement_list: statement
   15               | statement_list statement

   16 if_statement: IF LP expression RP statement
   17             | IF LP expression RP statement ELSE statement

   18 type_specifier: BOOLEAN_T
   19               | INT_T
   20               | DOUBLE_T

   21 expression: assignment_expression

   22 assignment_expression: logical_or_expression
   23                      | postfix_expression assignment_operator assignment_expression

   24 assignment_operator: ASSIGN_T
   25                    | ADD_ASSIGN_T
   26                    | SUB_ASSIGN_T
   27                    | MUL_ASSIGN_T
   28                    | DIV_ASSIGN_T
   29                    | MOD_ASSIGN_T

   30 logical_or_expression: logical_and_expression
   31                      | logical_or_expression LOGICAL_OR logical_and_expression

   32 logical_and_expression: equality_expression
   33                       | logical_and_expression LOGICAL_AND equality_expression

   34 equality_expression: relational_expression
   35                    | equality_expression EQ relational_expression
   36                    | equality_expression NE relational_expression

   37 relational_expression: additive_expression
   38                      | relational_expression GT additive_expression
   39                      | relational_expression GE additive_expression
   40                      | relational_expression LT additive_expression
   41                      | relational_expression LE additive_expression

   42 additive_expression: multiplicative_expression
   43                    | additive_expression ADD multiplicative_expression
   44                    | additive_expression SUB multiplicative_expression

   45 multiplicative_expression: unary_expression
   46                          | multiplicative_expression MUL unary_expression
   47                          | multiplicative_expression DIV unary_expression
   48                          | multiplicative_expression MOD unary_expression

   49 unary_expression: postfix_expression
   50                 | SUB unary_expression
   51                 | EXCLAMATION unary_expression

   52 postfix_expression: primary_expression
   53                   | postfix_expression LP RP
   54                   | postfix_expression INCREMENT
   55                   | postfix_expression DECREMENT

   56 primary_expression: LP expression RP
   57                   | IDENTIFIER
   58                   | INT_LITERAL
   59                   | DOUBLE_LITERAL
   60                   | TRUE_T
   61                   | FALSE_T


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LP (258) 5 16 17 53 56
    RP (259) 5 16 17 53 56
    LC (260) 12 13
    RC (261) 12 13
    COMMA (262)
    LOGICAL_AND (263) 33
    LOGICAL_OR (264) 31
    EQ (265) 35
    ASSIGN_T (266) 11 24
    NE (267) 36
    GT (268) 38
    GE (269) 39
    LE (270) 41
    LT (271) 40
    SEMICOLON (272) 5 6 10 11
    COLON (273)
    ADD (274) 43
    SUB (275) 44 50
    MUL (276) 46
    DIV (277) 47
    MOD (278) 48
    ADD_ASSIGN_T (279) 25
    SUB_ASSIGN_T (280) 26
    MUL_ASSIGN_T (281) 27
    DIV_ASSIGN_T (282) 28
    MOD_ASSIGN_T (283) 29
    INCREMENT (284) 54
    DECREMENT (285) 55
    EXCLAMATION (286) 51
    DOT (287)
    INT_LITERAL <iv> (288) 58
    DOUBLE_LITERAL <dv> (289) 59
    IDENTIFIER <name> (290) 5 10 11 57
    IF (291) 16 17
    ELSE (292) 17
    ELSIF (293)
    WHILE (294)
    FOR (295)
    RETURN (296)
    BREAK (297)
    CONTINUE (298)
    TRUE_T (299) 60
    FALSE_T (300) 61
    BOOLEAN_T (301) 18
    INT_T (302) 19
    DOUBLE_T (303) 20
    STRING_T (304)
    LOWER_THAN_ELSE (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    translation_unit (52)
        on left: 1 2
        on right: 0 2
    definition_or_statement (53)
        on left: 3 4
        on right: 1 2
    function_definition <function_declaration> (54)
        on left: 5
        on right: 3
    statement <statement> (55)
        on left: 6 7 8 9
        on right: 4 14 15 16 17
    declaration_statement <statement> (56)
        on left: 10 11
        on right: 7
    block <statement> (57)
        on left: 12 13
        on right: 8
    statement_list <statement_list> (58)
        on left: 14 15
        on right: 12 15
    if_statement <statement> (59)
        on left: 16 17
        on right: 9
    type_specifier <type_specifier> (60)
        on left: 18 19 20
        on right: 5 10 11
    expression <expression> (61)
        on left: 21
        on right: 6 11 16 17 56
    assignment_expression <expression> (62)
        on left: 22 23
        on right: 21 23
    assignment_operator <assignment_operator> (63)
        on left: 24 25 26 27 28 29
        on right: 23
    logical_or_expression <expression> (64)
        on left: 30 31
        on right: 22 31
    logical_and_expression <expression> (65)
        on left: 32 33
        on right: 30 31 33
    equality_expression <expression> (66)
        on left: 34 35 36
        on right: 32 33 35 36
    relational_expression <expression> (67)
        on left: 37 38 39 40 41
        on right: 34 35 36 38 39 40 41
    additive_expression <expression> (68)
        on left: 42 43 44
        on right: 37 38 39 40 41 43 44
    multiplicative_expression <expression> (69)
        on left: 45 46 47 48
        on right: 42 43 44 46 47 48
    unary_expression <expression> (70)
        on left: 49 50 51
        on right: 45 46 47 48 50 51
    postfix_expression <expression> (71)
        on left: 52 53 54 55
        on right: 23 49 53 54 55
    primary_expression <expression> (72)
        on left: 56 57 58 59 60 61
        on right: 52


State 0

    0 $accept: • translation_unit $end

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10
    BOOLEAN_T       shift, and go to state 11
    INT_T           shift, and go to state 12
    DOUBLE_T        shift, and go to state 13

    translation_unit           go to state 14
    definition_or_statement    go to state 15
    function_definition        go to state 16
    statement                  go to state 17
    declaration_statement      go to state 18
    block                      go to state 19
    if_statement               go to state 20
    type_specifier             go to state 21
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 1

   56 primary_expression: LP • expression RP

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    expression                 go to state 33
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 2

   12 block: LC • statement_list RC
   13      | LC • RC

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    RC              shift, and go to state 34
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10
    BOOLEAN_T       shift, and go to state 11
    INT_T           shift, and go to state 12
    DOUBLE_T        shift, and go to state 13

    statement                  go to state 35
    declaration_statement      go to state 18
    block                      go to state 19
    statement_list             go to state 36
    if_statement               go to state 20
    type_specifier             go to state 37
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 3

   50 unary_expression: SUB • unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    unary_expression    go to state 38
    postfix_expression  go to state 39
    primary_expression  go to state 32


State 4

   51 unary_expression: EXCLAMATION • unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    unary_expression    go to state 40
    postfix_expression  go to state 39
    primary_expression  go to state 32


State 5

   58 primary_expression: INT_LITERAL •

    $default  reduce using rule 58 (primary_expression)


State 6

   59 primary_expression: DOUBLE_LITERAL •

    $default  reduce using rule 59 (primary_expression)


State 7

   57 primary_expression: IDENTIFIER •

    $default  reduce using rule 57 (primary_expression)


State 8

   16 if_statement: IF • LP expression RP statement
   17             | IF • LP expression RP statement ELSE statement

    LP  shift, and go to state 41


State 9

   60 primary_expression: TRUE_T •

    $default  reduce using rule 60 (primary_expression)


State 10

   61 primary_expression: FALSE_T •

    $default  reduce using rule 61 (primary_expression)


State 11

   18 type_specifier: BOOLEAN_T •

    $default  reduce using rule 18 (type_specifier)


State 12

   19 type_specifier: INT_T •

    $default  reduce using rule 19 (type_specifier)


State 13

   20 type_specifier: DOUBLE_T •

    $default  reduce using rule 20 (type_specifier)


State 14

    0 $accept: translation_unit • $end
    2 translation_unit: translation_unit • definition_or_statement

    $end            shift, and go to state 42
    LP              shift, and go to state 1
    LC              shift, and go to state 2
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10
    BOOLEAN_T       shift, and go to state 11
    INT_T           shift, and go to state 12
    DOUBLE_T        shift, and go to state 13

    definition_or_statement    go to state 43
    function_definition        go to state 16
    statement                  go to state 17
    declaration_statement      go to state 18
    block                      go to state 19
    if_statement               go to state 20
    type_specifier             go to state 21
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 15

    1 translation_unit: definition_or_statement •

    $default  reduce using rule 1 (translation_unit)


State 16

    3 definition_or_statement: function_definition •

    $default  reduce using rule 3 (definition_or_statement)


State 17

    4 definition_or_statement: statement •

    $default  reduce using rule 4 (definition_or_statement)


State 18

    7 statement: declaration_statement •

    $default  reduce using rule 7 (statement)


State 19

    8 statement: block •

    $default  reduce using rule 8 (statement)


State 20

    9 statement: if_statement •

    $default  reduce using rule 9 (statement)


State 21

    5 function_definition: type_specifier • IDENTIFIER LP RP SEMICOLON
   10 declaration_statement: type_specifier • IDENTIFIER SEMICOLON
   11                      | type_specifier • IDENTIFIER ASSIGN_T expression SEMICOLON

    IDENTIFIER  shift, and go to state 44


State 22

    6 statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 45


State 23

   21 expression: assignment_expression •

    $default  reduce using rule 21 (expression)


State 24

   22 assignment_expression: logical_or_expression •
   31 logical_or_expression: logical_or_expression • LOGICAL_OR logical_and_expression

    LOGICAL_OR  shift, and go to state 46

    $default  reduce using rule 22 (assignment_expression)


State 25

   30 logical_or_expression: logical_and_expression •
   33 logical_and_expression: logical_and_expression • LOGICAL_AND equality_expression

    LOGICAL_AND  shift, and go to state 47

    $default  reduce using rule 30 (logical_or_expression)


State 26

   32 logical_and_expression: equality_expression •
   35 equality_expression: equality_expression • EQ relational_expression
   36                    | equality_expression • NE relational_expression

    EQ  shift, and go to state 48
    NE  shift, and go to state 49

    $default  reduce using rule 32 (logical_and_expression)


State 27

   34 equality_expression: relational_expression •
   38 relational_expression: relational_expression • GT additive_expression
   39                      | relational_expression • GE additive_expression
   40                      | relational_expression • LT additive_expression
   41                      | relational_expression • LE additive_expression

    GT  shift, and go to state 50
    GE  shift, and go to state 51
    LE  shift, and go to state 52
    LT  shift, and go to state 53

    $default  reduce using rule 34 (equality_expression)


State 28

   37 relational_expression: additive_expression •
   43 additive_expression: additive_expression • ADD multiplicative_expression
   44                    | additive_expression • SUB multiplicative_expression

    ADD  shift, and go to state 54
    SUB  shift, and go to state 55

    $default  reduce using rule 37 (relational_expression)


State 29

   42 additive_expression: multiplicative_expression •
   46 multiplicative_expression: multiplicative_expression • MUL unary_expression
   47                          | multiplicative_expression • DIV unary_expression
   48                          | multiplicative_expression • MOD unary_expression

    MUL  shift, and go to state 56
    DIV  shift, and go to state 57
    MOD  shift, and go to state 58

    $default  reduce using rule 42 (additive_expression)


State 30

   45 multiplicative_expression: unary_expression •

    $default  reduce using rule 45 (multiplicative_expression)


State 31

   23 assignment_expression: postfix_expression • assignment_operator assignment_expression
   49 unary_expression: postfix_expression •
   53 postfix_expression: postfix_expression • LP RP
   54                   | postfix_expression • INCREMENT
   55                   | postfix_expression • DECREMENT

    LP            shift, and go to state 59
    ASSIGN_T      shift, and go to state 60
    ADD_ASSIGN_T  shift, and go to state 61
    SUB_ASSIGN_T  shift, and go to state 62
    MUL_ASSIGN_T  shift, and go to state 63
    DIV_ASSIGN_T  shift, and go to state 64
    MOD_ASSIGN_T  shift, and go to state 65
    INCREMENT     shift, and go to state 66
    DECREMENT     shift, and go to state 67

    $default  reduce using rule 49 (unary_expression)

    assignment_operator  go to state 68


State 32

   52 postfix_expression: primary_expression •

    $default  reduce using rule 52 (postfix_expression)


State 33

   56 primary_expression: LP expression • RP

    RP  shift, and go to state 69


State 34

   13 block: LC RC •

    $default  reduce using rule 13 (block)


State 35

   14 statement_list: statement •

    $default  reduce using rule 14 (statement_list)


State 36

   12 block: LC statement_list • RC
   15 statement_list: statement_list • statement

    LP              shift, and go to state 1
    LC              shift, and go to state 2
    RC              shift, and go to state 70
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    IF              shift, and go to state 8
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10
    BOOLEAN_T       shift, and go to state 11
    INT_T           shift, and go to state 12
    DOUBLE_T        shift, and go to state 13

    statement                  go to state 71
    declaration_statement      go to state 18
    block                      go to state 19
    if_statement               go to state 20
    type_specifier             go to state 37
    expression                 go to state 22
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 37

   10 declaration_statement: type_specifier • IDENTIFIER SEMICOLON
   11                      | type_specifier • IDENTIFIER ASSIGN_T expression SEMICOLON

    IDENTIFIER  shift, and go to state 72


State 38

   50 unary_expression: SUB unary_expression •

    $default  reduce using rule 50 (unary_expression)


State 39

   49 unary_expression: postfix_expression •
   53 postfix_expression: postfix_expression • LP RP
   54                   | postfix_expression • INCREMENT
   55                   | postfix_expression • DECREMENT

    LP         shift, and go to state 59
    INCREMENT  shift, and go to state 66
    DECREMENT  shift, and go to state 67

    $default  reduce using rule 49 (unary_expression)


State 40

   51 unary_expression: EXCLAMATION unary_expression •

    $default  reduce using rule 51 (unary_expression)


State 41

   16 if_statement: IF LP • expression RP statement
   17             | IF LP • expression RP statement ELSE statement

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    expression                 go to state 73
    assignment_expression      go to state 23
    logical_or_expression      go to state 24
    logical_and_expression     go to state 25
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 31
    primary_expression         go to state 32


State 42

    0 $accept: translation_unit $end •

    $default  accept


State 43

    2 translation_unit: translation_unit definition_or_statement •

    $default  reduce using rule 2 (translation_unit)


State 44

    5 function_definition: type_specifier IDENTIFIER • LP RP SEMICOLON
   10 declaration_statement: type_specifier IDENTIFIER • SEMICOLON
   11                      | type_specifier IDENTIFIER • ASSIGN_T expression SEMICOLON

    LP         shift, and go to state 74
    ASSIGN_T   shift, and go to state 75
    SEMICOLON  shift, and go to state 76


State 45

    6 statement: expression SEMICOLON •

    $default  reduce using rule 6 (statement)


State 46

   31 logical_or_expression: logical_or_expression LOGICAL_OR • logical_and_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    logical_and_expression     go to state 77
    equality_expression        go to state 26
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 47

   33 logical_and_expression: logical_and_expression LOGICAL_AND • equality_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    equality_expression        go to state 78
    relational_expression      go to state 27
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 48

   35 equality_expression: equality_expression EQ • relational_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    relational_expression      go to state 79
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 49

   36 equality_expression: equality_expression NE • relational_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    relational_expression      go to state 80
    additive_expression        go to state 28
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 50

   38 relational_expression: relational_expression GT • additive_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    additive_expression        go to state 81
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 51

   39 relational_expression: relational_expression GE • additive_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    additive_expression        go to state 82
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 52

   41 relational_expression: relational_expression LE • additive_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    additive_expression        go to state 83
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 53

   40 relational_expression: relational_expression LT • additive_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    additive_expression        go to state 84
    multiplicative_expression  go to state 29
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 54

   43 additive_expression: additive_expression ADD • multiplicative_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    multiplicative_expression  go to state 85
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 55

   44 additive_expression: additive_expression SUB • multiplicative_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    multiplicative_expression  go to state 86
    unary_expression           go to state 30
    postfix_expression         go to state 39
    primary_expression         go to state 32


State 56

   46 multiplicative_expression: multiplicative_expression MUL • unary_expression

    LP              shift, and go to state 1
    SUB             shift, and go to state 3
    EXCLAMATION     shift, and go to state 4
    INT_LITERAL     shift, and go to state 5
    DOUBLE_LITERAL  shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    TRUE_T          shift, and go to state 9
    FALSE_T         shift, and go to state 10

    unary_expression    go to state 87
    postfix_expression  go to state 39
    primary_expression  go to state 32


State 57

   47 multiplicative_expression: multiplicative_expression DIV • unary_expression
